# gfacs

./: AGENTS.md  ORCHESTRATOR_README.md  README.md  pyproject.toml  requirements.txt  run.sh
bpp/: AGENTS.md  README.md  __init__.py  test.py
config/: AGENTS.md  orchestrator.yaml
cvrp_nls/: AGENTS.md  README.md  __init__.py  aco.py  swapstar.py  test.py
cvrptw_nls/: AGENTS.md  README.md  __init__.py  aco.py  test.py
docs/: AGENTS.md  README.md  orchestrator.md
gfacs/: AGENTS.md  README.md  __init__.py  orchestrator.py  verify_install.py
gfacs/utils/: AGENTS.md  README.md  __init__.py  animations.py  io.py  logging.py  profiling.py  validation.py  visualization.py
logs/: gfacs.utils.profiling.jsonl
op/: AGENTS.md  README.md  __init__.py  test.py
outputs/cli_test_20251227_152949/: EXPERIMENT_SUMMARY.md  experiment_summary.json
outputs/cli_test_20251227_153225/: EXPERIMENT_SUMMARY.md
outputs/cli_test_20251227_153305/: EXPERIMENT_SUMMARY.md
outputs/cli_test_20251227_153315/: EXPERIMENT_SUMMARY.md
outputs/cli_test_20251227_153324/: EXPERIMENT_SUMMARY.md
outputs/cli_test_20251227_153333/: EXPERIMENT_SUMMARY.md
outputs/cli_test_20251227_153532/: EXPERIMENT_SUMMARY.md
outputs/cli_test_20251227_153619/: EXPERIMENT_SUMMARY.md
outputs/cli_test_20251227_153629/: EXPERIMENT_SUMMARY.md
outputs/cli_test_20251227_153652/: EXPERIMENT_SUMMARY.md
outputs/cli_test_20251227_153703/: EXPERIMENT_SUMMARY.md
outputs/cli_test_20251227_153751/: EXPERIMENT_SUMMARY.md
outputs/cli_test_20251227_153817/: EXPERIMENT_SUMMARY.md
outputs/cli_test_20251227_153829/: EXPERIMENT_SUMMARY.md
outputs/cli_test_20251227_160442/: EXPERIMENT_SUMMARY.md
outputs/custom_problems_20251226_160612/: EXPERIMENT_SUMMARY.md  experiment_summary.json
outputs/full_experiment_20251227_123730/: EXPERIMENT_SUMMARY.md  experiment_summary.json
outputs/full_experiment_20251227_160424/: EXPERIMENT_SUMMARY.md
outputs/gfacs_experiment_20251227_152949/: EXPERIMENT_SUMMARY.md  experiment_summary.json
outputs/gfacs_experiment_20251227_153203/: EXPERIMENT_SUMMARY.md
outputs/gfacs_experiment_20251227_153226/: EXPERIMENT_SUMMARY.md
outputs/gfacs_experiment_20251227_153306/: EXPERIMENT_SUMMARY.md
outputs/gfacs_experiment_20251227_153315/: EXPERIMENT_SUMMARY.md
outputs/gfacs_experiment_20251227_153324/: EXPERIMENT_SUMMARY.md
outputs/gfacs_experiment_20251227_153334/: EXPERIMENT_SUMMARY.md
outputs/gfacs_experiment_20251227_153652/: EXPERIMENT_SUMMARY.md
outputs/gfacs_experiment_20251227_153704/: EXPERIMENT_SUMMARY.md
outputs/gfacs_experiment_20251227_153712/: EXPERIMENT_SUMMARY.md
outputs/gfacs_experiment_20251227_153735/: EXPERIMENT_SUMMARY.md
outputs/gfacs_experiment_20251227_153751/: EXPERIMENT_SUMMARY.md
outputs/gfacs_experiment_20251227_153817/: EXPERIMENT_SUMMARY.md
outputs/gfacs_experiment_20251227_153830/: EXPERIMENT_SUMMARY.md
outputs/gfacs_experiment_20251227_160443/: EXPERIMENT_SUMMARY.md
outputs/quick_test_20251226_154814/: EXPERIMENT_SUMMARY.md  experiment_summary.json
outputs/quick_test_20251226_160147/: EXPERIMENT_SUMMARY.md  experiment_summary.json
outputs/quick_test_20251226_160409/: EXPERIMENT_SUMMARY.md  experiment_summary.json
outputs/quick_test_20251226_160510/: EXPERIMENT_SUMMARY.md  experiment_summary.json
outputs/quick_test_20251226_160602/: EXPERIMENT_SUMMARY.md  experiment_summary.json
outputs/quick_test_20251226_160636/: EXPERIMENT_SUMMARY.md  experiment_summary.json
outputs/test_cvrp_final_20251227_124021/: EXPERIMENT_SUMMARY.md  experiment_summary.json
outputs/test_cvrp_fix_20251227_123952/: EXPERIMENT_SUMMARY.md  experiment_summary.json
outputs/test_cvrp_improved_20251227_124014/: EXPERIMENT_SUMMARY.md  experiment_summary.json
outputs/test_cvrp_only_20251227_124008/: EXPERIMENT_SUMMARY.md  experiment_summary.json
outputs/test_experiment_20251227_152949/: EXPERIMENT_SUMMARY.md  (+1 more)
pctsp/: AGENTS.md  README.md  __init__.py  test.py
scripts/: AGENTS.md  README.md  setup_env.sh  setup_menu.sh  setup_solvers.sh  verify_install.py
smtwtp/: AGENTS.md  README.md  __init__.py  test.py
sop/: AGENTS.md  README.md  __init__.py  test.py
tests/: AGENTS.md  README.md  __init__.py  conftest.py  test_animations.py  test_io.py  test_orchestrator.py  test_performance.py  test_setup_menu.py  test_validation.py  test_verify_install.py  test_visualization.py
tsp_nls/: AGENTS.md  README.md  __init__.py  aco.py  install_concorde.sh  net.py  test.py  train.py  utils.py
(+134 files in other folders)
